# Command-Deck

./: .gitignore  README.md  SECURITY.md  build_and_clean.sh  dev_install_unsigned_macos.sh  install_and_clean.sh  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
dev/: command-deck-guide-only-cards-plan.md  command-deck-public-release-platform-plan.html  env.example  guide-cards.md  linux-support-done.md  public_rel.md  release.yml  win-support-done.md
onboarding/: README.md
onboarding/guides/: conda-mamba-basics.md  containers-basics.md  day-zero-checklist.md  docker-vs-compose.md  file-types.md  gcp-basics.md  gcp-cost-safety.md  gcp-vm-selection.md  git-basics.md  git-vs-gh.md  github-auth-safe.md  journals-and-venues.md  lab-stack.md  latex-basics.md  moose-development.md  moose-setup.md  overleaf-git-github-one-folder.md  package-managers.md  quarto-basics.md  ripgrep-and-search.md  singularity-apptainer.md  start-here.md  taichi-best-practices.md  terminal-basics.md  uv-basics.md  uv-vs-conda.md  why-overleaf.md  zotero-workflow.md
onboarding/templates/: Containers and HPC.toml  GCP.toml  Git and GitHub.toml  Python Environments.toml  Research Map.toml  Simulation Tools.toml  Start Here.toml  Terminal and Files.toml  Writing and Publishing.toml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  runner.rs  store.rs
