[package]
name = "command-deck"
version = "0.1.0"
description = "Tabbed command launcher for commands you forget every few days"
authors = ["Shmuel"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
